[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-meter"
version = "0.1.0"
description = "LLM token cost tracking and sliding-window rate limiting — Redis or in-memory, zero config"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "ai", "cost-tracking", "rate-limiting", "openai", "anthropic", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5"]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/varunmahajan1/llm-meter"
Issues = "https://github.com/varunmahajan1/llm-meter/issues"
